# tabrela

./: .env.example  .gitignore  Dockerfile  LICENSE.md  README.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json  railway.toml  run_dev.sh
.github/workflows/: attendance-ci.yml  auth-ci.yml  backend-ci.yml  deploy-backend.yml  deploy-frontend.yml
docker/: Dockerfile.backend  entrypoint.sh  healthcheck.sh  nginx.conf  supervisord.conf
docs/: DEPLOYMENT.md  VPS_DEPLOYMENT.md
scripts/: vps-setup.sh
services/: apply_migrations.sh  seed_test_users.sql
services/api_keygen/: keygen.py
services/attendance/: .env.example  Cargo.toml
services/attendance/src/: auth_middleware.rs  config.rs  database.rs  handlers.rs  lib.rs  main.rs  models.rs
services/auth/: .env.example  Cargo.toml  Dockerfile  Makefile  docker-compose.yml
services/auth/.cargo/: audit.toml
services/auth/migrations/: 20241122000000_init.down.sql  20241123000000_add_verification_and_user_fields.down.sql  20241123000000_add_verification_and_user_fields.up.sql  20241124000000_make_user_fields_required.up.sql  20241125000000_password_reset_otp.down.sql  20241125000000_password_reset_otp.up.sql  20241125100000_add_unique_constraints.down.sql  20241125100000_add_unique_constraints.up.sql  20241130000000_add_admin_users.up.sql  init.up.sql
services/auth/src/: auth_middleware.rs  config.rs  csrf.rs  database.rs  email_client.rs  handlers.rs  jwt.rs  lib.rs  main.rs  models.rs  security.rs
services/auth/tests/: integration_test.rs  system_test.rs
services/email/: .env.example  .gitignore  =2.0.0  Dockerfile  README.md  app.py  models.py  requirements.txt  send_demo.py  test_models.py
services/merit/: Cargo.toml  sqlx.toml
services/merit/src/: auth_middleware.rs  config.rs  database.rs  handlers.rs  lib.rs  main.rs  models.rs
services/migrations/: 20241124000000_make_user_fields_required.down.sql  20241124000001_convert_to_otp.down.sql  20241124000001_convert_to_otp.up.sql  20241130000000_add_admin_users.down.sql  20251130000000_attendance_init.down.sql  20251130000000_attendance_init.up.sql  20251201000000_merit_system.down.sql  20251201000000_merit_system.up.sql  20251201000001_awards_system.down.sql  20251201000001_awards_system.up.sql  20251202000000_match_allocation_system.down.sql  20251202000000_match_allocation_system.up.sql  20251203000000_friendly_match_updates.down.sql  20251203000000_friendly_match_updates.up.sql  20251203000001_guest_allocations.down.sql  20251203000001_guest_allocations.up.sql  20251203000002_allow_multiple_allocations.down.sql  20251203000002_allow_multiple_allocations.up.sql
services/tabulation/: Cargo.toml  sqlx.toml
services/tabulation/src/: auth_middleware.rs  config.rs  database.rs  handlers.rs  lib.rs  main.rs  models.rs
services/webhook/: README.md  app.py
web/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
web/public/: manifest.json
web/src/: App.tsx  index.scss
web/src/components/: AdminRoute.tsx  Footer.tsx  Header.tsx  InstallPrompt.tsx  ProtectedRoute.tsx
web/src/config/: social-links.json
web/src/context/: AuthContext.tsx
web/src/hooks/: usePWAInstall.ts
web/src/pages/: AboutPage.tsx  AccessibilityPage.tsx  AdminAwardsPage.tsx  AdminDashboardPage.tsx  AdminMatchesPage.tsx  AdminMeritPage.tsx  AdminPerformancePage.tsx  AllocationPage.tsx  AttendanceDashboardPage.tsx  BallotPage.tsx  ContactPage.tsx  ErrorPage.tsx  EventDetailPage.tsx  EventFormPage.tsx  EventsPage.tsx  FAQPage.tsx  ForgotPasswordPage.tsx  Home.tsx  LoadingPage.tsx  LoginPage.tsx  MatchDetailPage.tsx  MissionPage.tsx  (+6 more)
(+10 files in other folders)
