[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }

# Security
argon2 = "0.5"
jsonwebtoken = "9"
rand = "0.8"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID
uuid = { version = "1.0", features = ["serde", "v4"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Environment
dotenvy = "0.15"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Validation
validator = { version = "0.19", features = ["derive"] }

# HTTP
http = "1.0"

[dev-dependencies]
axum-test = "14"
tokio-test = "0.4"
mockall = "0.12"
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
dotenv = "0.15"

[[test]]
name = "integration"
path = "tests/integration_test.rs"

[[test]]
name = "system"
path = "tests/system_test.rs"
