[package]
name = "tabulation"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "tabulation"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate", "derive", "macros", "rust_decimal"] }

# Security - JWT validation
jsonwebtoken = "9"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID
uuid = { version = "1.0", features = ["serde", "v4"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Environment
dotenvy = "0.15"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Validation
validator = { version = "0.19", features = ["derive"] }

# HTTP
http = "1.0"
reqwest = { version = "0.12", features = ["json"] }

# Decimal for scores
rust_decimal = { version = "1.33", features = ["serde", "serde-str"] }

[dev-dependencies]
